Details
-
Bug
-
Resolution: Fixed
-
P4
-
5.0, 7
-
b51
-
generic, sparc
-
generic, solaris
Description
*** NOTE: essentially the same bug as 6750401 ***
However, the fix involves two components, i.e. PKCS11 and JSSE, and 6750401 is used to integrate JSSE side of changes and thus this is created for integrating PKCS11 side of changes.
Please refer to 6750401 for the description of the issue.
However, the fix involves two components, i.e. PKCS11 and JSSE, and 6750401 is used to integrate JSSE side of changes and thus this is created for integrating PKCS11 side of changes.
Please refer to 6750401 for the description of the issue.
Attachments
Issue Links
- duplicates
-
JDK-6567025 OOM condition not handled in PCSS11
- Closed
-
JDK-6425560 JVM crashes on failed 'read' call: assertion in p11_general.c:277
- Closed
- relates to
-
JDK-6750401 SSL stress test with GF leads to 32 bit max process size in less than 5 minutes,with PCKS11 provider
- Closed
-
JDK-4918870 Examine session cache implementation (sun.misc.Cache)
- Closed