6812738: SSL stress test with GF leads to 32 bit max process size in less than 5 minutes with PCKS11 provider

Removed finalize() and add more error handling to native code

Reviewed-by: vinnie